{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 13,
  "lineage": "f7713e03-a9ac-df15-5414-5b19c3e35363",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f76089013809e52",
            "associate_with_private_ip": "172.20.1.21",
            "association_id": "eipassoc-06699759c3a81abcf",
            "domain": "vpc",
            "id": "eipalloc-01f76089013809e52",
            "instance": "i-0db38b06650af80b8",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-069d0d0f76a6a4c34",
            "private_dns": "ip-172-20-1-21.ap-south-1.compute.internal",
            "private_ip": "172.20.1.21",
            "public_dns": "ec2-3-7-142-242.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.142.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Webserverpublicip"
            },
            "tags_all": {
              "Name": "Webserverpublicip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.web1",
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee6644906ff4d6c",
            "arn": "arn:aws:ec2:ap-south-1:412741421182:instance/i-0db38b06650af80b8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db38b06650af80b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deven",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-069d0d0f76a6a4c34"
              }
            ],
            "primary_network_interface_id": "eni-069d0d0f76a6a4c34",
            "private_dns": "ip-172-20-1-21.ap-south-1.compute.internal",
            "private_ip": "172.20.1.21",
            "public_ip": "3.7.142.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a411f6ac9919ee5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0396469df10c0dcf2",
            "tags": {
              "Name": "Newserver1",
              "infra": "dev"
            },
            "tags_all": {
              "Name": "Newserver1",
              "infra": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fd27dab11d76acd8"
            ]
          },
          "dependencies": [
            "aws_key_pair.deven",
            "aws_network_interface.web1",
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:internet-gateway/igw-03aabd3fc0ba1bd03",
            "id": "igw-03aabd3fc0ba1bd03",
            "owner_id": "412741421182",
            "vpc_id": "vpc-09ba8d9188c33a04d"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:network-interface/eni-069d0d0f76a6a4c34",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e7ca0ff05d82797f",
                "device_index": 0,
                "instance": "i-0db38b06650af80b8"
              }
            ],
            "id": "eni-069d0d0f76a6a4c34",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:4a:c6:1f:af:96",
            "owner_id": "412741421182",
            "private_ip": "172.20.1.21",
            "private_ips": [
              "172.20.1.21"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0fd27dab11d76acd8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0396469df10c0dcf2"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:route-table/rtb-0cc05c27f67cbc79f",
            "id": "rtb-0cc05c27f67cbc79f",
            "owner_id": "412741421182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03aabd3fc0ba1bd03",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03aabd3fc0ba1bd03",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "tags_all": {
              "Name": "route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba8d9188c33a04d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f7f472266e878bf",
            "route_table_id": "rtb-0cc05c27f67cbc79f",
            "subnet_id": "subnet-0396469df10c0dcf2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.prd-route-table",
            "aws_subnet.web",
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:security-group/sg-0fd27dab11d76acd8",
            "description": "Allow 80 443 and 22 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd27dab11d76acd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Non-TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "412741421182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ba8d9188c33a04d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:subnet/subnet-0eb2674da7b3de45c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb2674da7b3de45c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412741421182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            },
            "vpc_id": "vpc-09ba8d9188c33a04d"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:subnet/subnet-0396469df10c0dcf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0396469df10c0dcf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412741421182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-09ba8d9188c33a04d"
          },
          "dependencies": [
            "aws_vpc.prd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:412741421182:vpc/vpc-09ba8d9188c33a04d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-02c748602c7992213",
            "default_route_table_id": "rtb-060a8b73677ab5f69",
            "default_security_group_id": "sg-07c052ecbff4bcb8c",
            "dhcp_options_id": "dopt-998660f1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09ba8d9188c33a04d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060a8b73677ab5f69",
            "owner_id": "412741421182",
            "tags": {
              "Name": "Prod-VPC"
            },
            "tags_all": {
              "Name": "Prod-VPC"
            }
          }
        }
      ]
    }
  ]
}